--- a/COACHTECH/index.html
+++ b/COACHTECH/index.html
@@ -38,7 +38,7 @@
     <div id="contents" class="wrap">
       <div class="flex around">
         <div class="mission">
-          <img src="img/mission-img.jpg">
+            <img src="img/mission-img.jpg">
         </div>
         <div class="contents">
           <h3>お客様のために進化する企業であり続ける</h3>
@@ -53,13 +53,14 @@
     <div class="service">
       <div class="section-title">service</div>
       <div class="flex around"> 
-        <div class="service2"><img src="img/service2.jpg"></div>
-        <div class="one">
-          <h3>web製作事業</h3>
-          <p>コーチングのミッション</p>
-          <p>ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建設業から美容、ブライダル、飲食店まで多種多様な業種の製作実績があります。</p>
-          <div class="button-submit">
+        <div class="service2"><img src="img/service2.jpg">
+          <div class="one">
+           <h3>web製作事業</h3>
+           <p>コーチングのミッション</p>
+           <p>ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建設業から美容、ブライダル、飲食店まで多種多様な業種の製作実績があります。</p>
+           <div class="button-submit">
             <button class="button-detail" type="submit">サービス詳細</button>
+            </div>
           </div>
         </div>
         <div class="service1"><img src="img/service1.jpg"></div>
@@ -75,17 +76,19 @@
     </div>
 
     <div class="details">
-      <div class="company">
-        <div class="company-text">
-          <h2>company</h2>
-          <p>会社概要</p>
+      <div id="details">
+        <div class="company">
+          <div class="company-text">
+            <h2>company</h2>
+            <p>会社概要</p>
+          </div>
         </div>
-      </div>
-      <div class="recruit">
-        <div class="recruit-text">
-          <h2>recruit</h2>
-          <p>採用情報</p>
-        </div>
+        <div class="recruit">
+          <div class="recruit-text">
+            <h2>recruit</h2>
+            <p>採用情報</p>
+          </div>
+        </div>  
       </div>
       <div class="FAQ">
         <div class="logo">FAQ</div>
