レスポンシブデザイン　未完成

--- a/COACHTECH/index.html
+++ b/COACHTECH/index.html
@@ -21,11 +21,16 @@
         </ul>
       </nav>
     </div>
+    <div id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
 
   <main>
     <div class="eyecatch">
-      <p class="esrcatch-txt">機械ではできない仕事を</p>
+      <p class="eyecatch-txt">機械ではできない仕事を</p>
       <div class="news">
         <div class="date">2019/01/01</div>
         <div class="article">ニュースタイトルがここに入ります。3月の決算報告書</div>
@@ -36,12 +41,11 @@
     </div>
 
     <div id="contents" class="wrap">
-      <div class="flex around">
         <div class="mission">
             <img src="img/mission-img.jpg">
         </div>
         <div class="contents">
-          <h3>お客様のために進化する企業であり続ける</h3>
+          <h3>お客様のために進化する成長企業であり続ける</h3>
           <p>顧客主導型サービスを提供する企業として、お客様の会社経営に必要なサービスと情報を提供し続ける企業支援会社を目指します。企業が現在直面している「勝ち残るため」の戦略を提供できる会社として、ホームページをはじめ、各種マーケティングをご提供いたします。</p>
           <div class="button-submit">
             <button class="button" type="submit">ミッション詳細</button>
@@ -52,7 +56,6 @@
     
     <div class="service">
       <div class="section-title">service</div>
-      <div class="flex around"> 
         <div class="service2"><img src="img/service2.jpg">
           <div class="one">
            <h3>web製作事業</h3>
