レスポンシブデザイン　未完成

--- a/COACHTECH/index.html
+++ b/COACHTECH/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/stylesheet.css" />
 </head>
 <body>
+  <script src="js/main.js"></script>
   <header>
     <div class="flex between">
       <h1 class="header-logo">estra inc.</h1>
@@ -31,13 +32,15 @@
   <main>
     <div class="eyecatch">
       <p class="eyecatch-txt">機械ではできない仕事を</p>
-      <div class="news">
+      <div class="news-wrapper">
+        <div class="news">
         <div class="date">2019/01/01</div>
         <div class="article">ニュースタイトルがここに入ります。3月の決算報告書</div>
-      </div>
-      <div class="news-logo">
-       <div id="news-logo">news</div> 
-      </div>
+        </div>
+        <div class="news-logo">
+         <div id="news-logo">news</div> 
+        </div>
+     </div>
     </div>
 
     <div id="contents" class="wrap">
